[package]
name = "kafka-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.156", features=["derive"]}
serde_json = "1.0.94"
futures = "0.3.27"
rdkafka = "0.29.0"
tokio = {version="1.26.0", features=["macros", "rt-multi-thread"]}
thiserror = "1.0.39"
chrono = {version="0.4.24", features=["serde"]}
diesel = {version="2.0.3", features=["postgres", "r2d2", "chrono", "serde_json"]}
diesel-derive-enum = {version="2.0.1", features=["postgres"]}
r2d2 = "0.8.10"
