[project]
name = "kafka-listener"
readme = "README.md"
version = "0.0.1"
dependencies = [

]

[project.urls]
"Repository" = "https://github.com/interactivereduction/jobcontroller"

[project.scripts]
kafkalistener = "kafka_listener.kafka_listener:main"

[project.optional-dependencies]
formatting = [
    "toml==0.10.2",
    "black==23.1.0",
]

test = [
    "pytest==7.2.2"
]

code-inspection = [
    "pylint==2.17.0",
    "mypy==1.1.1",
    "kafka_listener[test]"
]

[tool.setuptools]
packages = ["kafka_listener"]
